Version 10.2 - Hysteria edition. 14 June 2022

Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068


Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt

Improved SmartLoad & Drag-Drop: 
-Allow to load a .rom file as a custom rom file for the current machine
-Allow to Drag-Drop when menu open

Improved ZX Desktop:
-Added configurable icons to the ZX Desktop: icons to windows, icons to actions, file links
-Right mouse button is used now for secondary actions. It no longer simulates ESC key (unless you enable it on ZX Vision Settings)
-Allow to extend ZX Desktop vertically
-Added frame around emulated machine

Improved HiLow DataDrive emulation:
-Allow to Format, Browse and Chkdsk an Hilow DataDrive image (.ddh file)
-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package


Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed.
Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed HiLow DataDrive emulation
Fixed crash (stack smashing detected) when showing Debug CPU window (and compiled using -fstack-protector)
Fixed segfault when starting ZEsarUX + disabled welcome splash message + enabled reopen windows on start setting + no window to restore
Fixed trap print numbers on Spectrum and ZX81 (setting --chardetectcompatnum)
Fixed segfault when selecting an invalid file type on real tape


Some other minor bugfixes and improvements



Version 10.1 - Carrier Command edition. 06 May 2022

Added real joystick support on Mac
Added joystick support for Hat controllers
Added new joystick event to exit ZEsarUX