@@ -1870,7 +1870,8 @@ printf (
         "--disablefooter             Disable window footer\n"             
         "--ignoremouseclickopenmenu  Ignore mouse clicking to open menu or ZX Desktop buttons\n" 
         "--limitopenmenu             Limit the action to open menu (F5 by default, joystick button). To open it, you must press the key 3 times in one second\n"               
-        "--language language         Select alternate language for menu. Available languages: es, ca\n"
+        "--language language         Select alternate language for menu. Available languages: es (Spanish), ca (Catalan). Default language if not set: English\n"
+        "--online-download-path p    Where to download files from the speccy and zx81 online browser. If not set, they are download to a temporary folder\n"
 
 #ifndef MINGW
 		"--no-cpu-usage              Do not show host CPU usage on footer\n"
@@ -7406,6 +7407,11 @@ int parse_cmdline_options(void) {
                     exit(1);
                 }
 			}
+
+            else if (!strcmp(argv[puntero_parametro],"--online-download-path")) {
+                siguiente_parametro_argumento();
+                strcpy(online_download_path,argv[puntero_parametro]);
+            }
 
 			else if (!strcmp(argv[puntero_parametro],"--menu-mix-method")) {
 				siguiente_parametro_argumento();
