@@ -2,6 +2,7 @@ Version 10.2 - Hysteria edition. 14 June 2022
 
 Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
 Added ZSF support for Timex TS2068
+Added setting for path where to download files from the speccy and zx81 online browser
 
 
 Improved ZX Spectrum Next emulation: added sprite rendering priority bit
